syntax = "proto3";

package go.micro.service.auth;

service Auth {
	rpc CheckRealNameAuth(CheckAuthRequest) returns (CheckAuthResponse) {}
	rpc RealNameAuth(AuthRequest) returns (AuthRequest) {}
}

message CheckAuthRequest {
	uint64 UserId = 1;
}

message CheckAuthResponse {
	uint64 UserId = 1;
    string Name = 2;
    string Mobile = 3;
    string RealName = 4;
    string IdCard = 5;
    string AvatarUrl = 6;
}

message AuthRequest {
    uint64 UserId = 1;
    string RealName = 2;
    string IdCard = 3;
}

enum AuthStatus {
    AuthFail = 0;
    AuthSucc = 1;
}

message AuthResponse {
    AuthStatus Status = 1;
}
